<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_account_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smaq.apps.smaqv01.AccountSettingsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="0dp"
        android:background="@color/mainMenuButtonBackground"
        android:theme="?attr/actionBarTheme"
        android:minHeight="40dp"
        android:id="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="40dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">


    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/setting_password_dll_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:id="@+id/profileSettingTitleText"
        android:layout_marginTop="10dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/bt_setting_ok"
        android:background="@null"
        android:scaleType="centerInside"
        android:id="@+id/profileSettingSave"
        android:layout_marginEnd="10dp" />

    <ImageButton
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/bt_setting_cancel"
        android:background="@null"
        android:scaleType="centerInside"
        android:id="@+id/profileSettingCancel"
        android:layout_marginStart="10dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:background="@null"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/bt_setting_logout"
        android:id="@+id/profileSettingLogout" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/profileSettingLogout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:text="@string/setting_content_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            android:id="@+id/settingLabelPassword"
            android:layout_marginStart="12dp" />

        <TextView
            android:text="@string/setting_content_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/settingLabelPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            android:id="@+id/settingLabelPhone"
            android:layout_marginStart="12dp" />

        <TextView
            android:text="@string/setting_content_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            android:id="@+id/settingLabelEmail"
            android:layout_marginStart="12dp" />

        <TextView
            android:text="@string/setting_content_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelPhone"
            app:layout_constraintBottom_toTopOf="@+id/settingLabelPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            android:id="@+id/settingLabelUsername"
            android:layout_marginStart="12dp" />

        <TextView
            android:text="@string/setting_content_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelPassword"
            app:layout_constraintBottom_toTopOf="@+id/settingLabelEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            android:id="@+id/settingLabelPasswordConfirm"
            android:layout_marginStart="12dp" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/settingLabelPhone"
            android:layout_marginRight="12dp"
            android:inputType="textPersonName"
            android:hint="@string/setting_field_phone"
            android:gravity="right"
            android:textSize="15sp"
            android:ems="10"
            android:background="@null"
            android:id="@+id/settingFieldPhone"
            android:layout_marginEnd="12dp" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/settingLabelUsername"
            android:layout_marginRight="12dp"
            android:inputType="textPersonName"
            android:hint="@string/setting_field_username"
            android:gravity="right"
            android:textSize="15sp"
            android:ems="10"
            android:background="@null"
            android:id="@+id/settingFieldUsername"
            android:layout_marginEnd="12dp" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/settingLabelPassword"
            android:layout_marginRight="12dp"
            android:inputType="textPassword"
            android:hint="password"
            android:gravity="right"
            android:textSize="15sp"
            android:ems="10"
            android:background="@null"
            android:id="@+id/settingFieldPassword"
            android:layout_marginEnd="12dp" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/settingLabelPasswordConfirm"
            android:layout_marginRight="12dp"
            android:inputType="textPassword"
            android:hint="confirm password"
            android:gravity="right"
            android:textSize="15sp"
            android:ems="10"
            android:background="@null"
            android:id="@+id/settingFieldPasswordConfirm"
            android:layout_marginEnd="12dp" />

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/settingLabelEmail"
            android:layout_marginRight="12dp"
            android:inputType="textPersonName"
            android:hint="@string/setting_field_email"
            android:gravity="right"
            android:textSize="15sp"
            android:ems="10"
            android:background="@null"
            android:id="@+id/settingFieldEmail"
            android:layout_marginEnd="12dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelPhone"
            app:layout_constraintBottom_toTopOf="@id/settingLabelUsername"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelUsername"
            app:layout_constraintBottom_toTopOf="@id/settingLabelPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelPassword"
            app:layout_constraintBottom_toTopOf="@id/settingLabelPasswordConfirm"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelPasswordConfirm"
            app:layout_constraintBottom_toTopOf="@id/settingLabelEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@android:color/darker_gray"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/settingLabelEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
