<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="180dp"
    android:layout_height="180dp">

    <android.support.constraint.ConstraintLayout
        android:layout_height="180dp"
        android:layout_width="180dp"
        android:layout_weight="1">

        <ImageView
            app:srcCompat="@drawable/bg_news_thumbnail_1"
            android:id="@+id/findteam_challenge_bg"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/transparentOverlay">

        </FrameLayout>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_news_article_favourite_off"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:id="@+id/findteam_challenge_favourite"
            android:visibility="invisible"
            android:layout_marginEnd="16dp" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_team_music"
            android:id="@+id/findteam_challenge_type" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_findteam_challenge_article_author_small"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_news_article_author_small_1"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_centerHorizontal="true"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:text="@string/news_subtitle_admin_pensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/ic_findteam_challenge_article_author_small"
            app:layout_constraintTop_toTopOf="@+id/ic_findteam_challenge_article_author_small"
            app:layout_constraintBottom_toBottomOf="@+id/ic_findteam_challenge_article_author_small"
            android:textSize="10sp"
            android:layout_marginLeft="16dp"
            android:id="@+id/findteam_challenge_article_author_small"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp" />

        <TextView
            android:text="@string/news_subtitle_content_pensi"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/ic_findteam_challenge_article_author_small"
            app:layout_constraintLeft_toLeftOf="@+id/ic_findteam_challenge_article_author_small"
            android:layout_marginBottom="16dp"
            android:maxLines="3"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:id="@+id/findteam_challenge_article_content_small" />

        <TextView
            android:text="@string/news_subtitle_pensi"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/findteam_challenge_article_content_small"
            app:layout_constraintLeft_toLeftOf="@+id/findteam_challenge_article_content_small"
            android:layout_marginBottom="16dp"
            android:maxLines="2"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/findteam_challenge_article_title_small" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>